--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
             <a href="home.html" onclick="closeNav()">Home</a>
             <a href="movies.html" onclick="closeNav()">Movies</a>
             <a href="series.html" onclick="closeNav()">Series</a>
-            <a href="request.html" onclick="closeNav()">Account</a>
+            <!-- <a href="request.html" onclick="closeNav()">Account</a> -->
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search movies or series..." onkeydown="if(event.key === 'Enter') searchContent()">
             </div>
@@ -624,21 +624,21 @@
     <!-- HERO -->
     <section class="hero" id="home">
         <div class="slider">
-            <div class="slide" style="background-image: url('/movie posters/superman legacy\ banner.jpg');">
+            <div class="slide" style="background-image: url('superman legacy banner.jpg');">
                 <div class="hero-content">
                     <h1>Superman: Legacy</h1>
                     <p>Experience the most thrilling action packed movie of the year, stream instantly!</p>
                     <button class="cta-button" onclick="window.location.href='superman-legacy.html'">Stream Now</button>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('/movie posters/fantastic4-banner.jpg');">
+            <div class="slide" style="background-image: url('fantastic4-banner.jpg');">
                 <div class="hero-content">
                     <h1>Fantastic Four: First Step</h1>
                     <p>Dive into a world of mystery and suspense with our top-rated crime series!</p>
                     <button class="cta-button" onclick="streamContent('https://drive.google.com/drive/folders/YOUR_CRIME_SERIES_ID')">Stream Now</button>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('/movie posters/thunderbolts-banner.jpg');">
+            <div class="slide" style="background-image: url('thunderbolts-banner.jpg');">
                 <div class="hero-content">
                     <h1>Thunderbols</h1>
                     <p>Embark on an interstellar journey with stunning visuals and a captivating story!</p>
@@ -755,7 +755,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 Linkflix. All rights reserved. Designed for optimal streaming via Google Drive.</p>
+        <p>&copy; 2025 Linkflix. All rights reserved. Designed for optimal streaming via Drive Links.</p>
     </footer>
 
     <!-- Custom Modal Structure -->
