--- a/movies.html
+++ b/movies.html
@@ -454,10 +454,10 @@
         <div class="logo">Linkflix</div>
         <button class="hamburger" aria-label="Toggle navigation" onclick="toggleNav()">&#9776;</button>
         <nav id="mainNav">
-            <a href="/home.html" onclick="closeNav()">Home</a>
-            <a href="/movies.html" onclick="closeNav()">Movies</a>
-            <a href="/series.html" onclick="closeNav()">Series</a>
-            <a href="/request.html" onclick="closeNav()">Request</a>
+            <a href="index.html" onclick="closeNav()">Home</a>
+            <a href="movies.html" onclick="closeNav()">Movies</a>
+            <a href="series.html" onclick="closeNav()">Series</a>
+            <!-- <a href="/request.html" onclick="closeNav()">Request</a> -->
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search movies or series..." onkeydown="if(event.key === 'Enter') searchContent()">
             </div>
@@ -471,24 +471,24 @@
             <h2>Featured Movies</h2>
             <div class="carousel-container">
                 <!-- Example movie card linking to Superman page -->
-                <div class="carousel-item" onclick="window.location.href='movies/superman-legacy.html'">
-                    <img src="/movie posters/superman-legacy.jpg" alt="Superman: Legacy Poster">
+                <div class="carousel-item" onclick="window.location.href='superman-legacy.html'">
+                    <img src="superman-legacy.jpg" alt="Superman: Legacy Poster">
                     <div class="overlay">
                         <h3>Superman: Legacy</h3>
                         <p>2025 | Superhero, Sci-Fi</p>
                     </div>
                 </div>
 
-                <div class="carousel-item" onclick="window.location.href='movies/fantastic4.html'">
-                    <img src="/movie posters/fantastic4.jpg" alt="Fantastic Four: First Step">
+                <div class="carousel-item" onclick="window.location.href='fantastic4.html'">
+                    <img src="fantastic4.jpg" alt="Fantastic Four: First Step">
                     <div class="overlay">
                         <h3>Fantastic Four: First Step</h3>
                         <p>2025 | Superhero, Sci-Fi</p>
                     </div>
                 </div>
 
-                <div class="carousel-item" onclick="window.location.href='movies/thunderbolts.html'">
-                    <img src="/movie posters/thunderbolts.jpg" alt="Thunderbolts">
+                <div class="carousel-item" onclick="window.location.href='thunderbolts.html'">
+                    <img src="thunderbolts.jpg" alt="Thunderbolts">
                     <div class="overlay">
                         <h3>Thunderbolts</h3>
                         <p>2023 | Sci-Fi, Adventure</p>
@@ -496,7 +496,7 @@
                 </div>
 
                 <div class="carousel-item" onclick="window.location.href='avengersendgame.html'">
-                    <img src="/movie posters/avengers-endgame.jpg" alt="Avengers Endgame">
+                    <img src="avengers-endgame.jpg" alt="Avengers Endgame">
                     <div class="overlay">
                         <h3>Avengers Endgame</h3>
                         <p>2019 | Comedy</p>
