--- a/series.html
+++ b/series.html
@@ -453,10 +453,10 @@
         <div class="logo">Linkflix</div>
         <button class="hamburger" aria-label="Toggle navigation" onclick="toggleNav()">&#9776;</button>
         <nav id="mainNav">
-            <a href="home.html" onclick="closeNav()">Home</a>
+            <a href="index.html" onclick="closeNav()">Home</a>
             <a href="movies.html" onclick="closeNav()">Movies</a>
             <a href="series.html" onclick="closeNav()">Series</a>
-            <a href="account.html" onclick="closeNav()">Account</a>
+            <!-- <a href="account.html" onclick="closeNav()">Account</a> -->
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search movies or series..." onkeydown="if(event.key === 'Enter') searchContent()">
             </div>
