--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
         <div class="logo">Linkflix</div>
         <button class="hamburger" aria-label="Toggle navigation" onclick="toggleNav()">&#9776;</button>
         <nav id="mainNav">
-            <a href="home.html" onclick="closeNav()">Home</a>
+            <a href="index.html" onclick="closeNav()">Home</a>
             <a href="movies.html" onclick="closeNav()">Movies</a>
             <a href="series.html" onclick="closeNav()">Series</a>
             <!-- <a href="request.html" onclick="closeNav()">Account</a> -->
