--- a/thunderbolts.html
+++ b/thunderbolts.html
@@ -723,10 +723,10 @@
         <div class="logo">Linkflix</div>
         <button class="hamburger" aria-label="Toggle navigation" onclick="toggleNav()">&#9776;</button>
         <nav id="mainNav">
-            <a href="home.html" onclick="closeNav()">Home</a>
+            <a href="index.html" onclick="closeNav()">Home</a>
             <a href="movies.html" onclick="closeNav()">Movies</a>
             <a href="series.html" onclick="closeNav()">Series</a>
-            <a href="request.html" onclick="closeNav()">Request</a>
+            <!-- <a href="request.html" onclick="closeNav()">Request</a> -->
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search movies or series..." onkeydown="if(event.key === 'Enter') searchContent()">
             </div>
@@ -737,7 +737,7 @@
     <!-- MAIN CONTENT FOR MOVIE DETAIL PAGE -->
     <main class="movie-detail-hero">
         <div class="movie-content-container">
-            <img src="/movie posters/thunderbolts.jpg" alt="Thunderbols poster" class="movie-poster">
+            <img src="thunderbolts.jpg" alt="Thunderbols poster" class="movie-poster">
             <div class="movie-details-text">
                 <h1>Thunderbolts*</h1>
                 <p class="tagline">The world needs a hero. He will rise.</p>
