--- a/fantastic4.html
+++ b/fantastic4.html
@@ -272,7 +272,7 @@
             position: relative;
             width: 100%;
             min-height: 85vh; /* Increased height for a grander feel */
-            background-image: url('/movie posters/fantastic4-banner.jpg'); /* More generic, epic feel */
+            background-image: url('fantastic4-banner.jpg'); /* More generic, epic feel */
             background-size: cover;
             background-position: center;
             display: flex;
