--- a/superman-legacy.html
+++ b/superman-legacy.html
@@ -272,7 +272,7 @@
             position: relative;
             width: 100%;
             min-height: 85vh; /* Increased height for a grander feel */
-            background-image: url('/movie posters/superman legacy banner.jpg'); /* More generic, epic feel */
+            background-image: url('superman legacy banner.jpg'); /* More generic, epic feel */
             background-size: cover;
             background-position: center;
             display: flex;
