--- a/superman-legacy.html
+++ b/superman-legacy.html
@@ -751,11 +751,12 @@
                     <p><strong>Starring:</strong> David Corenswet, Rachel Brosnahan, Nicholas Hoult, Wendell Pierce</p>
                     <p><strong>Runtime:</strong> 150 minutes</p>
                     <p><strong>Rating:</strong> PG-13</p>
+                    <p><strong>Redirect to:</strong> Terabox</p>
                 </div>
 
                 <!-- Buttons for playing movie and watching trailer -->
                 <div class="button-group">
-                    <button class="play-button" onclick="openVideoModal('https://mega.nz/embed/21p0mK4a#5CQzSiD-jAlHf2jyB8ypHm4NKPQ36iNyHA3zVQPOinE')">
+                    <button class="play-button" onclick="openVideoModal('https://1024terabox.com/s/1Gvdvqe_fe2Oo1VCORLLsHg')">
                         PLAY MOVIE
                     </button>
                     <button class="play-button trailer-button" onclick="openVideoModal('https://www.youtube.com/embed/Ox8ZLF6cGM0?si=Qd_6WIm2dULOm_mz')">
