--- a/thunderbolts.html
+++ b/thunderbolts.html
@@ -740,25 +740,26 @@
             <img src="thunderbolts.jpg" alt="Thunderbols poster" class="movie-poster">
             <div class="movie-details-text">
                 <h1>Thunderbolts*</h1>
-                <p class="tagline">The world needs a hero. He will rise.</p>
+                <p class="tagline">The New Avengers.</p>
                 <p class="synopsis">
-                    Clark Kent, a young reporter, discovers his extraordinary powers and heritage. As the last survivor of Krypton, he must embrace his destiny as Superman, protecting humanity while grappling with his dual identity. This film explores his journey to reconcile his alien origins with his human upbringing, embodying truth, justice, and hope for a new generation.
+                    Thunderbolts is a thrilling Marvel film that brings together a group of unpredictable anti-heroes and former villains on a covert government mission. Each member carries a dark past and their own motives, forcing them to navigate uneasy alliances and hidden agendas. As they face a powerful new threat, the team must learn to trust one another in a world that sees them as expendable. Packed with action, humor, and emotional depth, Thunderbolts explores what it truly means to seek redemption when heroes and villains aren’t so easily defined.
                 </p>
                 <div class="meta-info">
                     <p><strong>Release Year:</strong> 2025</p>
-                    <p><strong>Genre:</strong> Action, Sci-Fi, Adventure, Superhero</p>
-                    <p><strong>Director:</strong> James Gunn</p>
-                    <p><strong>Starring:</strong> David Corenswet, Rachel Brosnahan, Nicholas Hoult, Wendell Pierce</p>
-                    <p><strong>Runtime:</strong> 150 minutes</p>
+                    <p><strong>Genre:</strong> Action, Sci-Fi</p>
+                    <p><strong>Director:</strong> Jake Schreier</p>
+                    <p><strong>Starring:</strong> Florence Pugh, Sebastian Stan, Lewis Pullman, Wyatt Russell, David Harbour</p>
+                    <p><strong>Runtime:</strong> 126 minutes</p>
                     <p><strong>Rating:</strong> PG-13</p>
+                    <p><strong>Redirect to:</strong> Terabox</p>
                 </div>
 
                 <!-- Buttons for playing movie and watching trailer -->
                 <div class="button-group">
-                    <button class="play-button" onclick="openVideoModal('https://mega.nz/embed/WsZTEYjY#G-Yifw5KnSAMEgcst2mjQJ-_H1E4oVytjFsLesJfrEM')">
+                    <button class="play-button" onclick="openVideoModal('https://1024terabox.com/s/1X89XwjMgPcUD3Snz6j5KJg')">
                         PLAY MOVIE
                     </button>
-                    <button class="play-button trailer-button" onclick="openVideoModal('https://www.youtube.com/embed/-sAOWhvheK8?si=yNzpFoulXhktoV9S')">
+                    <button class="play-button trailer-button" onclick="openVideoModal('https://www.youtube.com/embed/-sAOWhvheK8?si=30O2MURMTwXHxnkE')">
                         WATCH TRAILER
                     </button>
                 </div>
@@ -771,27 +772,27 @@
     <section class="category-section">
         <h2>Suggested Movies</h2>
         <div class="carousel-container">
-            <div class="carousel-item" onclick="window.location.href='#'">
-                <img src="https://placehold.co/300x450/4CAF50/FFFFFF?text=Heroic%0AJourney" alt="Heroic Journey Poster">
+            <div class="carousel-item" onclick="window.location.href='avengersendgame.html'">
+                <img src="avengers-endgame.jpg" alt="Avengers Endgame">
                 <div class="overlay">
-                    <h3>Heroic Journey</h3>
-                    <p>2024 | Action, Adventure</p>
+                    <h3>Avngers Endgame</h3>
+                    <p>2019 | Action, Sci-fi</p>
                 </div>
             </div>
 
-            <div class="carousel-item" onclick="window.location.href='#'">
-                <img src="https://placehold.co/300x450/2196F3/FFFFFF?text=Cosmic%0AClash" alt="Cosmic Clash Poster">
+            <div class="carousel-item" onclick="window.location.href='fantastic4.html'">
+                <img src="fantastic4.jpg" alt="Fantastic Four: First Step">
                 <div class="overlay">
-                    <h3>Cosmic Clash</h3>
-                    <p>2023 | Sci-Fi, Action</p>
+                    <h3>Fantastic Four: First Step</h3>
+                    <p>2025 | Sci-Fi, Action</p>
                 </div>
             </div>
 
-            <div class="carousel-item" onclick="window.location.href='#'">
-                <img src="https://placehold.co/300x450/FFC107/333333?text=The%0AProtector" alt="The Protector Poster">
+            <div class="carousel-item" onclick="window.location.href='superman-legacy.html'">
+                <img src="superman-legacy.jpg" alt="Superman">
                 <div class="overlay">
-                    <h3>The Protector</h3>
-                    <p>2022 | Thriller, Action</p>
+                    <h3>Superman</h3>
+                    <p>2025 | Sci-fi, Action</p>
                 </div>
             </div>
 
