--- a/thunderbolts.html
+++ b/thunderbolts.html
@@ -756,7 +756,7 @@
 
                 <!-- Buttons for playing movie and watching trailer -->
                 <div class="button-group">
-                    <button class="play-button" onclick="openVideoModal('https://1024terabox.com/s/1X89XwjMgPcUD3Snz6j5KJg')">
+                    <button class="play-button" onclick="window.location.href=('https://1024terabox.com/s/1X89XwjMgPcUD3Snz6j5KJg')">
                         PLAY MOVIE
                     </button>
                     <button class="play-button trailer-button" onclick="openVideoModal('https://www.youtube.com/embed/-sAOWhvheK8?si=30O2MURMTwXHxnkE')">
