--- a/superman-legacy.html
+++ b/superman-legacy.html
@@ -756,7 +756,7 @@
 
                 <!-- Buttons for playing movie and watching trailer -->
                 <div class="button-group">
-                    <button class="play-button" onclick="openVideoModal('https://1024terabox.com/s/1Gvdvqe_fe2Oo1VCORLLsHg')">
+                    <button class="play-button" onclick="window.location.href=('https://1024terabox.com/s/1Gvdvqe_fe2Oo1VCORLLsHg')">
                         PLAY MOVIE
                     </button>
                     <button class="play-button trailer-button" onclick="openVideoModal('https://www.youtube.com/embed/Ox8ZLF6cGM0?si=Qd_6WIm2dULOm_mz')">
@@ -772,11 +772,11 @@
     <section class="category-section">
         <h2>Suggested Movies</h2>
         <div class="carousel-container">
-            <div class="carousel-item" onclick="window.location.href='#'">
-                <img src="https://placehold.co/300x450/4CAF50/FFFFFF?text=Heroic%0AJourney" alt="Heroic Journey Poster">
+            <div class="carousel-item" onclick="window.location.href='thunderbolts.html'">
+                <img src="thunderbolts.jpg" alt="Thunderbolts">
                 <div class="overlay">
-                    <h3>Heroic Journey</h3>
-                    <p>2024 | Action, Adventure</p>
+                    <h3>Thunderbolts</h3>
+                    <p>2025 | Action, Sci-fi</p>
                 </div>
             </div>
 
